# tr-sentinel-BR

./: LICENSE  README.md  pyproject.toml
examples/: run_probes.py
tests/: test_smoke.py
tr_sentinel/: cli.py
tr_sentinel/agents/: openai_agent.py
tr_sentinel/api/: app.py
tr_sentinel/evaluators/: llm_evaluator.py
tr_sentinel/orchestrator/: runner.py
tr_sentinel/probes/: __init__.py  base.py  data_exfiltration.py  instructions_leakage.py  jailbreaks.py  prompt_injection.py  role_confusion.py  secret_leakage.py
tr_sentinel/reporters/: console.py  json_reporter.py
